# scotch-rs

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml  rustdoc.yml
examples/: gmap.rs  simple_gmap.rs  test_scotch_graph_part_ovl.rs
implementors/core/clone/: trait.Clone.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/drop/: trait.Drop.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/std/error/: trait.Error.js
scotch/: all.html  index.html  sidebar-items.js  struct.Error.html  type.Num.html  type.Result.html
scotch-sys/: Cargo.toml  build.rs  wrapper.h
scotch-sys/src/: lib.rs  stub.rs
scotch/architecture/: index.html  sidebar-items.js  struct.Architecture.html
scotch/graph/: index.html  sidebar-items.js  struct.Data.html  struct.Graph.html  struct.Mapping.html
scotch/strategy/: index.html  sidebar-items.js  struct.Strategy.html
scotch_sys/: all.html  constant.BUFSIZ.html  constant.EOF.html  constant.FILENAME_MAX.html  constant.FOPEN_MAX.html  constant.INT16_MAX.html  constant.INT16_MIN.html  constant.INT32_MAX.html  constant.INT32_MIN.html  constant.INT8_MAX.html  constant.INT8_MIN.html  constant.INTPTR_MAX.html  constant.INTPTR_MIN.html  constant.INT_FAST16_MAX.html  constant.INT_FAST16_MIN.html  constant.INT_FAST32_MAX.html  constant.INT_FAST32_MIN.html  constant.INT_FAST8_MAX.html  constant.INT_FAST8_MIN.html  constant.INT_LEAST16_MAX.html  constant.INT_LEAST16_MIN.html  constant.INT_LEAST32_MAX.html  constant.INT_LEAST32_MIN.html  constant.INT_LEAST8_MAX.html  constant.INT_LEAST8_MIN.html  constant.L_ctermid.html  constant.L_tmpnam.html  constant.PTRDIFF_MAX.html  constant.PTRDIFF_MIN.html  constant.P_tmpdir.html  constant.SCOTCH_COARSENFOLD.html  constant.SCOTCH_COARSENFOLDDUP.html  constant.SCOTCH_COARSENNOMERGE.html  constant.SCOTCH_COARSENNONE.html  constant.SCOTCH_NUMSTRING.html  constant.SCOTCH_PATCHLEVEL.html  constant.SCOTCH_RELEASE.html  constant.SCOTCH_STRATBALANCE.html  constant.SCOTCH_STRATDEFAULT.html  constant.SCOTCH_STRATDISCONNECTED.html  (+470 more)
src/: architecture.rs  graph.rs  lib.rs  strategy.rs
src/scotch/: architecture.rs.html  graph.rs.html  lib.rs.html  strategy.rs.html
src/scotch_sys/: lib.rs.html
testdata/: grid.grf
